-changed "Hungary" to "Kingdom of Hungary" (as it was known from 1920–1946) 
-changed neutral "Ethiopia" to "Abyssinia" (as it was known at the time) 
-changed fascist Japan to "Empire of Japan" (as it was known from 1869-1947) and changed "State of Japan" to "Japan" (as it is known today)
-changed "Bulgaria" to "Kingdom of Bulgaria" (as it was known at the times, also Tsar Boris III was not a constitutional monarch)
-changed "Socialist Republic of Bulgaria" to "People's Republic of Bulgaria" (as it was known at the end of WW2)
-changed "Albania" to "Kingdom of Albania" (1928–1939).
-changed "Greece" to "Kingdom of Greece" and "National Union of Greece" to "Hellenic State" (1941-1944). 
-changed "France" to "French Third Republic" (1870-1940) and "French Commune" to "Communauté Française"
-changed democratic Australia to "Commonwealth of Australia" (current)
-changed "Yemen" to "Hashemite Mutawakkilite Kingdom" (1918-1962) 
-changed "Oman" to "Sultanate of Muscat and Oman" (1820-1970)
-changed "Bhutan" to "Kingdom of Bhutan" (as its been known since its establishment)
-changed "Tibet" to "Kingdom of Tibet" (1912-1951) 
-changed "Iraq" to "Kingdom of Iraq" (1932-1958) 
-changed "Afghanistan" to "Kingdom of Afghanistan" (1926-1973)
-changed "Czechloslovak Union" to "Czechoslovak Socialist Republic" (1948–1990) 
-changed "Denmark, Sweden, and Norway" to "Kingdoms of (insert name here)" 
-changed "Liberia" to "Republic of Liberia" (Official title)
-changed Nepal to "Kingdom of Nepal" (1923–2008) and democratic to "Federal Democratic Republic of Nepal" (2008-present)
-changed "Polish Republic" to "Republic of Poland" (Current)
-changed "People's Republic of China" to "Communist China"
-changed "Resurrectionist Ireland" to "Irish Corporate State" (PDX mixed up two fascist parties within Ireland)
-changed "Kiwi Empire" to "Nationalist New Zealand"
-changed Indian adjectives from "British Indian"

 Copyright 2017 Dick Bong, Ace of Aces