@@ -25,45 +25,6 @@
  SAF_democratic_ADJ:0 "South African"
  SAF_neutrality_ADJ:0 "South African"
  SAF_communism_ADJ:0 "South African"
-  #Mongolia
- MON_fascism:0 "New Mongol Empire"
- MON_fascism_DEF:0 "The New Mongol Empire"
- MON_democratic:0 "Mongolian Parliamentary Republic"
- MON_democratic_DEF:0 "The Mongolian Parliamentary Republic"
- MON_neutrality:0 "Great Mongolian State"
- MON_neutrality_DEF:0 "The Great Mongolian State"
- MON_communism:0 "Mongolian People's Republic" #Changed
- MON_communism_DEF:0 "The Mongolian People's Republic"
- MON_fascism_ADJ:0 "Mongolian"
- MON_democratic_ADJ:0 "Mongolian"
- MON_neutrality_ADJ:0 "Mongolian"
- MON_communism_ADJ:0 "Mongolian"
-  #Xinjiang (Sinkiang)
- SIK_fascism:0 "Dictatorial Xinjiang" #all changed
- SIK_fascism_DEF:0 "Dictatorial Xinjiang"
- SIK_democratic:0 "Xinjiang Independent Republic"
- SIK_democratic_DEF:0 "The Xinjiang Independent Republic"
- SIK_neutrality:0 "State of Xinjiang"
- SIK_neutrality_DEF:0 "State of Xinjiang"
- SIK_communism:0 "Xinjiang"
- SIK_communism_DEF:0 "Xinjiang"
- SIK_fascism_ADJ:0 "Xinjiang"
- SIK_democratic_ADJ:0 "Xinjiang"
- SIK_neutrality_ADJ:0 "Xinjiang"
- SIK_communism_ADJ:0 "Xinjiang"
-  #Tuva
- TAN_fascism:0 "Tuvan Nationalist Republic"
- TAN_fascism_DEF:0 "The Tuvan Nationalist Republic"
- TAN_democratic:0 "Tuva Independent Republic"
- TAN_democratic_DEF:0 "The Tuva Independent Republic"
- TAN_neutrality:0 "Tannu Uriankhai"
- TAN_neutrality_DEF:0 "Tannu Uriankhai"
- TAN_communism:0 "Tuvan People's Republic"
- TAN_communism_DEF:0 "The Tuvan People's Republic"
- TAN_fascism_ADJ:0 "Tuvan"
- TAN_democratic_ADJ:0 "Tuvan"
- TAN_neutrality_ADJ:0 "Tuvan"
- TAN_communism_ADJ:0 "Tuvan"
   #Iran
  PER_fascism:0 "Iranian Empire"
  PER_fascism_DEF:0 "The Iranian Empire"
@@ -129,31 +90,6 @@
  SIA_democratic_ADJ:0 "Thai"
  SIA_neutrality_ADJ:0 "Thai"
  SIA_communism_ADJ:0 "Thai"
-  #China
- CHI_fascism:0 "Reorganized Nationalist China"
- CHI_fascism_DEF:0 "Reorganized Nationalist China"
- CHI_democratic:0 "Republic of China"
- CHI_democratic_DEF:0 "The Republic of China"
- CHI_neutrality:0 "Republic of China"
- CHI_neutrality_DEF:0 "Republic of China"
- CHI_communism:0 "Chinese People's Republic"
- CHI_communism_DEF:0 "The Chinese People's Republic"
- CHI_fascism_ADJ:0 "Sino" #Added Sino
- CHI_democratic_ADJ:0 "Sino"
- CHI_neutrality_ADJ:0 "Sino"
- CHI_communism_ADJ:0 "Sino"
- PRC_fascism:0 "Chinese Empire"
- PRC_fascism_DEF:0 "The Chinese Empire"
- PRC_democratic:0 "Chinese Republic"
- PRC_democratic_DEF:0 "The Chinese Republic"
- PRC_neutrality:0 "China"
- PRC_neutrality_DEF:0 "China"
- PRC_communism:0 "Communist China" #Changed
- PRC_communism_DEF:0 "Communist China"
- PRC_fascism_ADJ:0 "Sino"
- PRC_democratic_ADJ:0 "Sino"
- PRC_neutrality_ADJ:0 "Sino"
- PRC_communism_ADJ:0 "Sino"
   #France
  FRA_fascism:1 "Nation Française"
  FRA_fascism_DEF:1 "la Nation Française"
@@ -816,19 +752,6 @@
  VEN_democratic_ADJ:0 "Venezuelan"
  VEN_neutrality_ADJ:0 "Venezuelan"
  VEN_communism_ADJ:0 "Venezuelan"
-  #Yunnan
- YUN_fascism:0 "Yunnan Free Empire"
- YUN_fascism_DEF:0 "The Yunnan Free Empire"
- YUN_democratic:0 "Yunnan Independent Republic"
- YUN_democratic_DEF:0 "The Yunnan Independent Republic"
- YUN_neutrality:0 "Yunnan"
- YUN_neutrality_DEF:0 "Yunnan"
- YUN_communism:0 "Soviet State of Yunnan"
- YUN_communism_DEF:0 "The Soviet State of Yunnan"
- YUN_fascism_ADJ:0 "Yunnanese"
- YUN_democratic_ADJ:0 "Yunnanese"
- YUN_neutrality_ADJ:0 "Yunnanese"
- YUN_communism_ADJ:0 "Yunnanese"
   #Australia
  AST_fascism:0 "Centralist Australia"
  AST_fascism_DEF:0 "Centralist Australia"
@@ -925,8 +848,8 @@
  YEM_fascism_DEF:0 "Federation of South Arabia"
  YEM_democratic:0 "Yemen Arab Republic"
  YEM_democratic_DEF:0 "Yemen Arab Republic"
- YEM_neutrality:0 "Yemen"
- YEM_neutrality_DEF:0 "Yemen"
+ YEM_neutrality:0 "Hashemite Mutawakkilite Kingdom"
+ YEM_neutrality_DEF:0 "The Hashemite Mutawakkilite Kingdom"
  YEM_communism:0 "Soviet State of Yemen"
  YEM_communism_DEF:0 "The Soviet State of Yemen"
  YEM_fascism_ADJ:0 "Yemeni"
@@ -1011,13 +934,41 @@
  CRO_democratic_ADJ:0 "Croatian"
  CRO_neutrality_ADJ:0 "Croatian"
  CRO_communism_ADJ:0 "Croatian"
+ 
+  #EAST ASIA#
+
+  #China
+ CHI_fascism:0 "Reorganized Nationalist China"
+ CHI_fascism_DEF:0 "Reorganized Nationalist China"
+ CHI_democratic:0 "Republic of China"
+ CHI_democratic_DEF:0 "The Republic of China"
+ CHI_neutrality:0 "Republic of China"
+ CHI_neutrality_DEF:0 "Republic of China"
+ CHI_communism:0 "Chinese People's Republic"
+ CHI_communism_DEF:0 "The Chinese People's Republic"
+ CHI_fascism_ADJ:0 "Sino" #Added Sino
+ CHI_democratic_ADJ:0 "Sino"
+ CHI_neutrality_ADJ:0 "Sino"
+ CHI_communism_ADJ:0 "Sino"
+ PRC_fascism:0 "Chinese Empire"
+ PRC_fascism_DEF:0 "The Chinese Empire"
+ PRC_democratic:0 "Chinese Republic"
+ PRC_democratic_DEF:0 "The Chinese Republic"
+ PRC_neutrality:0 "China"
+ PRC_neutrality_DEF:0 "China"
+ PRC_communism:0 "Communist China" #Changed
+ PRC_communism_DEF:0 "Communist China"
+ PRC_fascism_ADJ:0 "Sino"
+ PRC_democratic_ADJ:0 "Sino"
+ PRC_neutrality_ADJ:0 "Sino"
+ PRC_communism_ADJ:0 "Sino"
   #Guangxi
  GXC_fascism:0 "Third Guangxi Clique"
  GXC_fascism_DEF:0 "The Third Guangxi Clique"
  GXC_democratic:0 "Guangxi Independent Republic"
  GXC_democratic_DEF:0 "The Guangxi Independent Republic"
- GXC_neutrality:0 "Guangxi Clique"
- GXC_neutrality_DEF:0 "The Guangxi Clique"
+ GXC_neutrality:0 "Guangxi Clique" #Changed
+ GXC_neutrality_DEF:0 "The Guangxi Clique" #Changed
  GXC_communism:0 "Socialist Republic of the Zhu Jiang"
  GXC_communism_DEF:0 "The Socialist Republic of the Zhu Jiang"
  GXC_fascism_ADJ:0 "Guangxi"
@@ -1029,8 +980,8 @@
  SHX_fascism_DEF:0 "The Shanxi Yan State"
  SHX_democratic:0 "Shanxi Republic"
  SHX_democratic_DEF:0 "The Shanxi Republic"
- SHX_neutrality:0 "Shanxi"
- SHX_neutrality_DEF:0 "Shanxi"
+ SHX_neutrality:0 "Shanxi Clique" #Changed
+ SHX_neutrality_DEF:0 "The Shanxi Clique" #Changed
  SHX_communism:0 "Soviet State of Shanxi"
  SHX_communism_DEF:0 "Soviet State of Shanxi"
  SHX_fascism_ADJ:0 "Shanxi"
@@ -1038,21 +989,34 @@
  SHX_neutrality_ADJ:0 "Shanxi"
  SHX_communism_ADJ:0 "Shanxi"
   #Xibeisan ma
- XSM_fascism:0 "Xibei San Ma Free State"
- XSM_fascism_DEF:0 "The Xibei San Ma Free State"
+ XSM_fascism:0 "Ma Free State"
+ XSM_fascism_DEF:0 "The Ma Free State"
  XSM_democratic:0 "Hui Republic"
  XSM_democratic_DEF:0 "The Hui Republic"
- XSM_neutrality:0 "Xibei San Ma"
- XSM_neutrality_DEF:0 "Xibei San Ma"
+ XSM_neutrality:0 "Ma Clique" #Changed
+ XSM_neutrality_DEF:0 "The Ma Clique" #Changed
  XSM_communism:0 "People's Republic of Ma"
  XSM_communism_DEF:0 "The People's Republic of Ma"
  XSM_fascism_ADJ:0 "Ma"
  XSM_democratic_ADJ:0 "Ma"
  XSM_neutrality_ADJ:0 "Ma"
  XSM_communism_ADJ:0 "Ma"
+   #Yunnan
+ YUN_fascism:0 "Yunnan Free Empire"
+ YUN_fascism_DEF:0 "The Yunnan Free Empire"
+ YUN_democratic:0 "Yunnan Independent Republic"
+ YUN_democratic_DEF:0 "The Yunnan Independent Republic"
+ YUN_neutrality:0 "Yunnan Clique" #Changed
+ YUN_neutrality_DEF:0 "The Yunnan Clique" #Changed
+ YUN_communism:0 "Soviet State of Yunnan"
+ YUN_communism_DEF:0 "The Soviet State of Yunnan"
+ YUN_fascism_ADJ:0 "Yunnanese"
+ YUN_democratic_ADJ:0 "Yunnanese"
+ YUN_neutrality_ADJ:0 "Yunnanese"
+ YUN_communism_ADJ:0 "Yunnanese"
   #Menkukuo
- MEN_fascism:0 "Mengkukuo"
- MEN_fascism_DEF:0 "Mengkukuo"
+ MEN_fascism:0 "Mengjiang United Autonomous Government" #Changed
+ MEN_fascism_DEF:0 "The Mengjiang United Autonomous Government" #Changed
  MEN_democratic:0 "Republic of Mengjiang"
  MEN_democratic_DEF:0 "The Republic of Mengjiang"
  MEN_neutrality:0 "Mengjiang"
@@ -1063,11 +1027,24 @@
  MEN_democratic_ADJ:0 "Mengjiang"
  MEN_neutrality_ADJ:0 "Mengjiang"
  MEN_communism_ADJ:0 "Mengjiang"
+  #Manchuria
+ MAN_fascism:0 "Empire of Manchukuo" #Changed
+ MAN_fascism_DEF:0 "The Empire of Manchukuo" #Changed
+ MAN_democratic:0 "Manchu Republic"
+ MAN_democratic_DEF:0 "The Manchu Republic"
+ MAN_neutrality:0 "Manchuria" #Changed
+ MAN_neutrality_DEF:0 "Manchuria" #Changed
+ MAN_communism:2 "Free Democratic People's Republic of Manchuria" #Changed
+ MAN_communism_DEF:1 "The Free Democratic People's Republic of Manchuria" #Changed
+ MAN_fascism_ADJ:0 "Manchu"
+ MAN_democratic_ADJ:0 "Manchu"
+ MAN_neutrality_ADJ:0 "Manchu"
+ MAN_communism_ADJ:0 "Manchu"
   #Korea
  KOR_fascism:0 "Independent Korean Governorate"
  KOR_fascism_DEF:0 "The Independent Korean Governorate"
- KOR_democratic:0 "Korea"
- KOR_democratic_DEF:0 "Korea"
+ KOR_democratic:0 "Republic of Korea" #Changed
+ KOR_democratic_DEF:0 "The Republic of Korea" #Changed
  KOR_communism:0 "Democratic People's Republic of Korea"
  KOR_communism_DEF:0 "The Democratic People's Republic of Korea"
  KOR_neutrality:0 "Joseon Empire"
@@ -1076,6 +1053,46 @@
  KOR_democratic_ADJ:0 "Korean"
  KOR_communism_ADJ:0 "Korean"
  KOR_neutrality_ADJ:0 "Korean"
+  #Mongolia
+ MON_fascism:0 "New Mongol Empire"
+ MON_fascism_DEF:0 "The New Mongol Empire"
+ MON_democratic:0 "Mongolian Parliamentary Republic"
+ MON_democratic_DEF:0 "The Mongolian Parliamentary Republic"
+ MON_neutrality:0 "Great Mongolian State"
+ MON_neutrality_DEF:0 "The Great Mongolian State"
+ MON_communism:0 "Mongolian People's Republic" #Changed
+ MON_communism_DEF:0 "The Mongolian People's Republic"
+ MON_fascism_ADJ:0 "Mongolian"
+ MON_democratic_ADJ:0 "Mongolian"
+ MON_neutrality_ADJ:0 "Mongolian"
+ MON_communism_ADJ:0 "Mongolian"
+  #Xinjiang (Sinkiang)
+ SIK_fascism:0 "Dictatorial Xinjiang" #all changed
+ SIK_fascism_DEF:0 "Dictatorial Xinjiang"
+ SIK_democratic:0 "Xinjiang Independent Republic"
+ SIK_democratic_DEF:0 "The Xinjiang Independent Republic"
+ SIK_neutrality:0 "State of Xinjiang"
+ SIK_neutrality_DEF:0 "State of Xinjiang"
+ SIK_communism:0 "Xinjiang"
+ SIK_communism_DEF:0 "Xinjiang"
+ SIK_fascism_ADJ:0 "Xinjiang"
+ SIK_democratic_ADJ:0 "Xinjiang"
+ SIK_neutrality_ADJ:0 "Xinjiang"
+ SIK_communism_ADJ:0 "Xinjiang"
+  #Tuva
+ TAN_fascism:0 "Tuvan Nationalist Republic"
+ TAN_fascism_DEF:0 "The Tuvan Nationalist Republic"
+ TAN_democratic:0 "Tuva Independent Republic"
+ TAN_democratic_DEF:0 "The Tuva Independent Republic"
+ TAN_neutrality:0 "Tannu Uriankhai"
+ TAN_neutrality_DEF:0 "Tannu Uriankhai"
+ TAN_communism:0 "Tuvan People's Republic"
+ TAN_communism_DEF:0 "The Tuvan People's Republic"
+ TAN_fascism_ADJ:0 "Tuvan"
+ TAN_democratic_ADJ:0 "Tuvan"
+ TAN_neutrality_ADJ:0 "Tuvan"
+ TAN_communism_ADJ:0 "Tuvan"
+
   #Serbian Empire
  SER_fascism:0 "Serbian Empire"
  SER_fascism_DEF:0 "The Serbian Empire"
@@ -1466,19 +1483,6 @@
  BOT_democratic_ADJ:0 "Batswana"
  BOT_neutrality_ADJ:0 "Batswana"
  BOT_communism_ADJ:0 "Batswana"
-  #Manchuria
- MAN_fascism:0 "Manchukuo"
- MAN_fascism_DEF:0 "Manchukuo"
- MAN_democratic:0 "Manchu Republic"
- MAN_democratic_DEF:0 "The Manchu Republic"
- MAN_neutrality:0 "Manchukuo"
- MAN_neutrality_DEF:0 "Manchukuo"
- MAN_communism:2 "Free Democratic People's Republic of Manchukuo"
- MAN_communism_DEF:1 "The Free Democratic People's Republic of Manchukuo"
- MAN_fascism_ADJ:0 "Manchu"
- MAN_democratic_ADJ:0 "Manchu"
- MAN_neutrality_ADJ:0 "Manchu"
- MAN_communism_ADJ:0 "Manchu"
 
  FACTION_NAME_DEMOCRATIC_1:0 "The $CONTINENT_ADJ$ Association"
  FACTION_NAME_DEMOCRATIC_2:0 "The $CONTINENT_ADJ$ Entente"
